--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-08-03 [M] Release of cpg1.4.19 {GauGau}
 2008-08-01 [B] Fixed profile email check issue (thread ID 52391) {Nibbler}
 2008-08-01 [S] Fixed a security issue reported at http://www.milw0rm.com/exploits/6178 {Abbas}
 2008-07-25 [B] SMF anonymous user fix {Nibbler}
