Fixing thumbnail dimension calculation rounding error
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4828 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-08-11 [B] Fixing thumbnail dimension calculation rounding error {Nibbler}
 2008-08-07 [M] Updated version count from cpg1.4.19 to cpg1.4.20 in subversion repository as a preparation for the next release {GauGau}
 2008-08-03 [M] Release of cpg1.4.19 {GauGau}
 2008-08-01 [B] Fixed profile email check issue (thread ID 52391) {Nibbler}
