Removed option to allow users sharing email addresses
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4968 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-08-31 [O] Removed option to allow users sharing email addresses {GauGau}
 2008-08-30 [D] Added documentation for new hooks (after_delete_file, before_delete_file and add_file_data_success) {Abbas}
 2008-08-29 [O] Removed configurability of thumbnail and intermediate image prefix as per poll ID 54324 {GauGau}
 2008-08-29 [O] Removed vanity option from config as per poll id 54323 - users who want to show the vanity block just need to add the {VANITY} token to their custom theme {GauGau}
