Added optional text file for favorites download
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5061 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-09-27 [A] Added optional text file for favorites download {GauGau}
 2008-09-17 [A] Added license display to installer {GauGau}
 2008-09-17 [O] Reduced memory usage of keyword manager {Nibbler}
 2008-09-15 [M] Removed FAQ menu item as per dev team decision {GauGau}
