--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-04 [B] Fixed ratepic.php to not do unnecessary things {SaWey}
+2008-10-04 [B] Fixed typo in basic.sql as noted by François {SaWey}
 2008-10-02 [A] Added language manager {GauGau}
 2008-09-27 [A] Added optional text file for favorites download {GauGau}
 2008-09-17 [A] Added license display to installer {GauGau}
