--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-06 [O] Brushed up look of XP Publisher instructions screen {GauGau}
+2008-10-06 [A] Added option to promote XP Publisher on upload page {GauGau}
 2008-10-05 [B] Fixed versioncheck in installer and changed method of installation steps {SaWey}
 2008-10-04 [B] Fixed ratepic.php to not do unnecessary things {SaWey}
 2008-10-04 [B] Fixed typo in basic.sql as noted by François and corrected all other language insertions {SaWey}
