Added suhosin info to debug output
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5105 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-12 [A] Added known problematic suhosin options to debug output {Nibbler}
+2008-10-12 [O] Cache processed phpinfo data when generating debug output for performance {Nibbler}
 2008-10-12 [A] Added cleaner album selection box for admin tools {Nibbler}
 2008-10-12 [O] Switched cpg_db_fetch_row* functions to use mysql_fetch_assoc() instead of mysql_fetch_array() to save memory {Nibbler}
 2008-10-08 [B] Corrected SMF2 anonymous user fix {Nibbler}
