--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-14 [O] Moved scripts.js into js folder {GauGau}
 2008-10-12 [A] Added known problematic suhosin options to debug output {Nibbler}
 2008-10-12 [O] Cache processed phpinfo data when generating debug output for performance {Nibbler}
 2008-10-12 [A] Added cleaner album selection box for admin tools {Nibbler}
