Improved improper translation (thread ID 50460)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5132 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-18 [C] Improved improper translation (thread ID 50460) {GauGau}
 2008-10-08 [B] Corrected SMF2 anonymous user fix {Nibbler}
 2008-09-17 [O] Reduced memory usage of keyword manager {Nibbler}
 2008-09-06 [A] Added Croation language file (user contribution) {GauGau}
