--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-18 [B] Fixed error message in ecard.php that complained about wrong recipient email although sender email is wrong (thread ID 50844) {GauGau}
 2008-10-18 [C] Fixed minor smilies issue (thread ID 52804) {GauGau}
 2008-10-18 [C] Improved improper translation (thread ID 50460) {GauGau}
 2008-10-17 [A] Added "modified" column to versioncheck to find out if a file has been tampered with {GauGau}
