--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-23 [O] Added random files speedup (thread ID 54144) {Nibbler}
 2008-10-22 [A] Added options to version check to hide images and the modified column {GauGau}
 2008-10-21 [A] Removal of outdated files by updater {GauGau}
 2008-10-19 [O] Removed double ; at line ends (thread ID 51899) {GauGau}
