- Fixed the album password case sensitivity issue - Now the album passwords are stored as md5 hash
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5176 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-10-24 [B] Fixed the album password case sensitivity issue by hashing it {Abbas}
 2008-10-24 [A] Added profile field user_language (thread ID 15977) {GauGau}
 2008-10-24 [A] Added DivX support (thread ID 32380) {GauGau}
 2008-10-23 [O] Added random files speedup (thread ID 54144) {Nibbler}
