--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-11-04 [A] Resized full-size pop-up to fit on the screen {GauGau}
 2008-10-24 [B] Fixed the random meta album query for cases where no pictures are in db {Abbas}
 2008-10-24 [B] Fixed the album password case sensitivity issue by hashing it {Abbas}
 2008-10-24 [A] Added profile field user_language (thread ID 15977) {GauGau}
