--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-11-09 [B] Added missing translation to German language files (thread ID 56204) {GauGau}
 2008-10-20 [M] Re-did the credits section of the language files for easier future integration into cpg1.5.x {GauGau}
 2008-10-19 [O] Removed double ; at line ends (thread ID 51899) {GauGau}
 2008-10-19 [C] Fixed validation issue with registration screen (thread ID 51310) {GauGau}
