--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-11-17 [A] Re-did ban users page with pagination, sorting and multiple edits. Allowed email bans. Allowed ban by user name for non-existing accounts. {GauGau}
 2008-11-12 [A] Added option to automatically purge expired bans {GauGau}
 2008-11-09 [O] Changed installer coding style (removed install class) {SaWey}
 2008-11-09 [D] Added document about adding/renaming/deleting files for developers {GauGau}
