Fixed langfallback.inc.php and added French language by Frantz
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5280 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-11-23 [B] Fixed langfallback.inc.php and added French language by Frantz {SaWey}
 2008-11-20 [O] Replaced dtree with treeview plugin for documentation {GauGau}
 2008-11-19 [B] Fixed admin not being able to change an album's category in modifyalb.php {Paver}
 2008-11-18 [A] Added status display (active/inactive/banned) to profile.php and usermgr.php {GauGau}
