Added akismet check and stats on review comments page
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5283 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-11-24 [A] Added akismet check and stats on review comments page {GauGau}
 2008-11-24 [A] Added Akismet option for comment filtering {GauGau}
 2008-11-23 [B] Fixed langfallback.inc.php and added French language by Frantz {SaWey}
 2008-11-20 [O] Replaced dtree with treeview plugin for documentation {GauGau}
