--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-11-25 [A] Implemented option to use Akismet for guests only or for everyone {GauGau}
 2008-11-25 [A] Added Akismet and IP address columns to review comments page {GauGau}
 2008-11-24 [A] Added akismet check and stats on review comments page {GauGau}
 2008-11-24 [A] Added Akismet option for comment filtering {GauGau}
