--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-11-26 [O] Removed toggle for private IP address banning, as it never really has been used {GauGau}
 2008-11-26 [O] Replaced identical translations for "apply modifications" by one string in language file {GauGau}
 2008-11-26 [O] Added optional icons to some buttons {GauGau}
 2008-11-26 [O] Removed banned group, since it never has been taken into account anyway {GauGau}
