--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-12-11 [O] Replaced flag icons (from gif to png) {GauGau}
 2008-12-11 [A] Added group-based access levels (thumbs,intermediate,full-size) {Paver}
 2008-12-04 [A] Added 10 new plugin hooks {SaWey}
 2008-12-01 [A] Added the new upload page which uses swfupload (http://swfupload.org) - Work in progress {Abbas}
