Re-did batch-add graphics for fresher look
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@5385 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-12-14 [C] Re-did batch-add graphics for fresher look {GauGau}
 2008-12-14 [A] Added missing hook to add custom bbcode {SaWey}
 2008-12-14 [A] Reworked upload form to show flash-based form or single file form - all other options removed {Paver}
 2008-12-13 [A] Added 2 plugin hooks to add custom bbcode {SaWey}
