--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-12-15 [A] Added the fallback mechanism for flash upload interface {Abbas}
 2008-12-14 [A] Modified breadcrumb for meta-albums to show more intuitive breadcrumb {Paver}
 2008-12-14 [A] Added navbar buttons for inactive previous and next {Paver}
 2008-12-14 [B] Fixed some bugs in voting and changed it to make better use of jQuery {SaWey}
