--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -37,7 +37,7 @@ Changelog
 2008-12-11 [O] Replaced flag icons (from gif to png) {GauGau}
 2008-12-11 [A] Added group-based access levels (thumbs,intermediate,full-size) {Paver}
 2008-12-04 [A] Added 10 new plugin hooks {SaWey}
-2008-12-01 [A] Added the new upload page which uses swfupload (http://swfupload.org) - Work in progress {Abbas}
+2008-12-01 [A] Added the new upload page which uses swfupload (http://swfupload.org) {Abbas}
 2008-11-30 [A] Added pagination of comments {Nibbler}
 2008-11-30 [O] Converted ereg*() functions to use preg_match, simple string functions or existing Inspekt validation code for performance and compatibility with future versions of PHP. (Code contributed by ripat) {Nibbler}
 2008-11-29 [D] Changed minimum requirements section in docs from PHP4.2.0 to PHP4.3.0 {Nibbler}
